--- a/index.css
+++ b/index.css
@@ -1,327 +1,58 @@
-/* Blog TI. */
-
-position: relative;
-width: 1440px;
-height: 2313px;
-
-background: #F1F2E8;
-
-
-/* imagem_de_fundo 1 */
-.telahome{
-position: absolute;
-width: 1440px;
-height: 639px;
-left: 0px;
-top: 211px;
-
-background: url(imagem_de_fundo.png);
+ul {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+    align-items: center;
+    padding: 36px;
 }
 
-
-/* Esboço da tela principal - HOME */
-
-position: absolute;
-width: 496px;
-height: 149px;
-left: -31px;
-top: -204px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 60px;
-line-height: 58px;
-text-align: center;
-
-color: #FFFFFF;
-
-
-
-/* Facebook Instagram Linkedin */
-
-position: absolute;
-width: 470px;
-height: 209px;
-left: 89px;
-top: 2077px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 60px;
-line-height: 58px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Copyright © 2023 Blog Código & Café. Todos os direitos reservados. */
-
-position: absolute;
-width: 650px;
-height: 186px;
-left: 690px;
-top: 2077px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 60px;
-line-height: 58px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 1 */
-
-position: absolute;
-width: 159px;
-height: 183px;
-left: 66px;
-top: 68px;
-
-background: linear-gradient(180deg, #45444E 0%, rgba(255, 255, 255, 0) 100%);
-
-
-/* imagem2 1 */
-
-position: absolute;
-width: 1440px;
-height: 1189px;
-left: 0px;
-top: 850px;
-
-background: url(imagem2.png);
-
-
-/* TI */
-
-position: absolute;
-left: 6.6%;
-right: 84.24%;
-top: 5.24%;
-bottom: 92.53%;
-
-font-family: 'JejuHallasan';
-font-style: normal;
-font-weight: 400;
-font-size: 128px;
-line-height: 129px;
-
-color: #000000;
-
-
-
-/* Blog TI */
-
-position: absolute;
-width: 92px;
-height: 54px;
-left: calc(50% - 92px/2 - 594px);
-top: calc(50% - 54px/2 - 1045.5px);
-
-
-
-/* Blog TI */
-
-position: absolute;
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 48px;
-
-color: #000000;
-
-
-
-/* Tem interesse em aprender a programar? */
-
-position: absolute;
-width: 274px;
-height: 76px;
-left: 446px;
-top: 956px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 39px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Quer saber mais sobre tecnologia? */
-
-position: absolute;
-width: 254px;
-height: 86px;
-left: 146px;
-top: 951px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 39px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Quer ficar por dentro do que acontece no mundo da TI? */
-
-position: absolute;
-width: 279px;
-height: 118px;
-left: 306px;
-top: 1087px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 39px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Notícias da Semana */
-.news{
-position: absolute;
-width: 153px;
-height: 82px;
-left: 318px;
-top: 82px;
-
-font-family: 'Irish Grover';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
-
-color: #000000;
+nav a:hover {
+    color: blue;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+    font-size: large;
+}
 
+.center {
+    text-align: center;
+}
 
-/* Dicas e Tutoriais */
+header {
+    text-align: center;
+    margin-bottom: 40px;
+}
 
-position: absolute;
-width: 153px;
-height: 82px;
-left: 533px;
-top: 82px;
+main{
+    text-align: left;
+    margin-bottom: 40px;
+    
+}
 
-font-family: 'Irish Grover';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
+footer {
+    display: flex;
+    justify-content: center;    
+}
 
-color: #000000;
+footer a {
+    margin: 40px
+}
 
+footer a:hover {
+    color: blue;
+}
 
+footer p {
+   margin-top: 20px; 
+   text-align: center;
+}
 
-/* História da programação */
+body {
+    padding: 0px 50px;
+}
 
-position: absolute;
-width: 205px;
-height: 82px;
-left: 939px;
-top: 82px;
-
-font-family: 'Irish Grover';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Cursos Livres */
-
-position: absolute;
-width: 153px;
-height: 82px;
-left: 736px;
-top: 82px;
-
-font-family: 'Irish Grover';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Sobre Quem Somos */
-
-position: absolute;
-width: 175px;
-height: 82px;
-left: 1218px;
-top: 82px;
-
-font-family: 'Irish Grover';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Ellipse 1 */
-
-position: absolute;
-width: 603px;
-height: 506px;
-left: 105px;
-top: 1381px;
-
-background: rgba(248, 252, 85, 0.3);
-
-
-/* Continue por aqui e descubra muito mais!! */
-
-position: absolute;
-width: 337px;
-height: 205px;
-left: 245px;
-top: 1429px;
-
-font-family: 'Iceland';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 39px;
-text-align: center;
-
-color: #000000;
-
+body p {
+    font-size: medium;
+}
