--- a/index.css
+++ b/index.css
@@ -1,58 +1,77 @@
-ul {
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    align-items: center;
-    padding: 36px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #2b2d42;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #f4f3ee;
 }
-
+.header {
+    width: 100%;
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-transform: uppercase;
+}
+.logo {
+    width: 150px;
+    height: 150px;
+    margin-top: 40px;
+}
+.nav {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+.ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: #f4f3ee;
+}
 nav a:hover {
     color: blue;
 }
-
-a {
-    color: black;
-    text-decoration: none;
-    font-size: large;
-}
-
-.center {
-    text-align: center;
-}
-
 header {
     text-align: center;
     margin-bottom: 40px;
 }
-
-main{
-    text-align: left;
-    margin-bottom: 40px;
+footer {
+    width: 80%;
+    height: 20vh;
+    margin: 50px auto;
+    text-align: center;
+    line-height: 30px;
+}
+h1 {
+    text-align: center;
+    padding: 12px;
+}
+h2 {
+    text-align: center;
+    padding: 12px;
+}
+ul li {
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
     
 }
+.telahome {
+    margin-left: 300px;
+    padding: 12px;
+}
 
-footer {
+section { 
     display: flex;
-    justify-content: center;    
-}
-
-footer a {
-    margin: 40px
-}
-
-footer a:hover {
-    color: blue;
-}
-
-footer p {
-   margin-top: 20px; 
-   text-align: center;
-}
-
-body {
-    padding: 0px 50px;
-}
-
-body p {
-    font-size: medium;
+    justify-content: space-between;
+    text-align: center;    
+    padding: 12px;
+    border: solid 2px white;
+    margin: 12px 60px 12px 60px;
 }
