--- a/cursos/style.css
+++ b/cursos/style.css
@@ -1,58 +1,153 @@
-nav ul {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #2b2d42;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #f4f3ee;
+  }
+  
+  .header {
+    width: 100%;
+    height: 12vh;
     display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
     align-items: center;
-    padding: 36px;
-}
-
-
-nav a {
+    justify-content: space-evenly;
+    text-transform: uppercase;
+    
+  }
+  .logo {
+    width: 150px;
+    height: 150px;
+    margin-top: 40px;
+  }
+  .nav {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+  }
+  
+  a {
     text-decoration: none;
-    color: black;
-    font-size: large;
-}
-
-nav a:hover {
-    color: blue;
-}
-
-a {
-    text-decoration: none;
-    font-size: large;
-}
-
-header {
+    color: #f4f3ee;
+  }
+  
+  h1 {
     text-align: center;
-    margin-bottom: 40px;
+    text-transform: uppercase;
+    font-weight: 200;
+  }
+
+.curso1 {
+    align-items: center;
+    display: flex;
+    margin:10px auto;
+    justify-content: space-around;
+    box-sizing: border-box;
+}
+.curso1 h2 {
+  padding: 20px;
 }
 
-main h1 {
-    text-align: center;
+.curso1 img {
+  margin-bottom: -7em;
+  margin-left: 1em;
+}
+
+.curso1 p {
+  margin-left: 15em;
+  margin-bottom: 1em;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.curso1 a {
+  margin-left: 15em;
+  margin-bottom: 2em;
+  color: black;
+}
+
+.curso2 h2 {
+  padding: 20px;
+}
+
+.curso2 img {
+  margin-bottom: 0.1em;
+  margin-left: 1em;
+}
+
+.curso2 p {
+  margin-left: 15em;
+  margin-bottom: 1em;
+  margin-top: -3.5em;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.curso2 a {
+  margin-left: 15em;
+  margin-bottom: 2em;
+  color: black;
+}
+
+.curso3 h2 {
+  padding: 20px;
+}
+
+.curso3 img {
+  margin-bottom: -5em;
+  margin-left: 1em;
+}
+
+.curso3 p {
+  margin-left: 15em;
+  margin-bottom: 1em;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.curso3 a {
+  margin-left: 15em;
+  color: black;
+}
+
+.curso4 h2 {
+  padding: 20px;
+}
+
+.curso4 img {
+  margin-left: 1em;
+  margin-top: 2em;
+}
+
+.curso4 p {
+  margin-left: 15em;
+  margin-top: -3.5em;
+  margin-bottom: 1em;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.curso4 a {
+  margin-left: 15em;
+  margin-top: 5em;
+  color: black;
 }
 
 footer {
-    display: flex;
-    justify-content: center;    
-}
-
-footer a {
-    margin: 40px;
-}
-
-footer a:hover {
-    color: blue;
-}
-
-footer p {
-    margin-top: 20px; 
-    text-align: center;
-}
-
-body {
-    padding: 0px 50px;
-}
-
-body p {
-    font-size: medium;
+  width: 80%;
+  height: 20vh;
+  margin: 50px auto;
+  text-align: center;
+  line-height: 30px;
 }
