--- a/historia_da_programacao/historia.css
+++ b/historia_da_programacao/historia.css
@@ -1,17 +1,103 @@
-footer {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #2b2d42;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #f4f3ee;
+}
+
+.header {
+    width: 100%;
+    height: 12vh;
     display: flex;
-    justify-content: center;    
+    align-items: center;
+    justify-content: space-evenly;
+    text-transform: uppercase;
 }
 
-footer a {
-    margin: 40px
+.logo {
+    width: 150px;
+    height: 150px;
+    margin-top: 40px;
 }
 
-footer a:hover {
+.nav {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.section {
+    width: 60vw;
+    height: 40vh;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+  
+.img {
+    width: 100%;
+    object-fit: cover;
+    width: 14vw;
+    height: 32vh;
+    padding: 3.7px;
+}
+  
+.div {
+    width: 70%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    order: 1;
+}
+  
+.titulo {
+    font-size: 1.5em;
+    font-weight: 400;
+}
+
+.p {
+    font-size-adjust: initial;
+    font-weight: 400;
+    text-align: center;   
+}
+
+ul li {
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    justify-content: space-around;
+}
+
+nav a:hover {
     color: blue;
 }
 
-footer p {
-   margin-top: 20px; 
-   text-align: center;
+a {
+    text-decoration: none;
+    color: #f4f3ee;
 }
+
+h1 {
+    text-align: center;
+    padding: 12px;
+}
+
+footer {
+    width: 80%;
+    height: 20vh;
+    margin: 50px auto;
+    text-align: center;
+    line-height: 30px;
+}
+  
