--- a/dicas_e_tutoriais/index_dicas_e_tuto.css
+++ b/dicas_e_tutoriais/index_dicas_e_tuto.css
@@ -7,12 +7,12 @@
     color: #f4f3ee;
 }
 .header {
-    width: 100%;
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    text-transform: uppercase;
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  text-transform: uppercase;
 }
 .logo {
     width: 150px;
@@ -37,10 +37,6 @@ a {
 nav a:hover {
     color: blue;
 }
-header {
-    text-align: center;
-    margin-bottom: 40px;
-}
 footer {
     width: 80%;
     height: 20vh;
@@ -49,35 +45,42 @@ footer {
     line-height: 30px;
 }
 h1 {
-    text-align: center;
-    padding: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  padding: 12px
 }
 h2 {
     text-align: center;
     padding: 12px;
+    margin-bottom: 40px;
 }
 h3 {
-    margin: 24px 60px 24px 60px;
+    margin: 60px 60px 24px 60px;
 }
+h4 {
+    margin: 24px;
+}
+
 ul li {
     text-align: center;
     padding: 12px;
     text-decoration: none;
-    
 }
 .imagemdicas {
-    height: 100px; 
+    height: 100px;
     width: 160px;
-    margin-left: 600px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-section { 
+section {
     display: flex;
     justify-content: left;
-    text-align: left;    
+    text-align: left;
     padding: 24px;
     border: solid 2px white;
     margin: 12px 60px 12px 60px;
 }
-
-
