--- a/historia_da_programacao/historia.css
+++ b/historia_da_programacao/historia.css
@@ -8,12 +8,12 @@
 }
 
 .header {
-    width: 100%;
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    text-transform: uppercase;
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  text-transform: uppercase;
 }
 
 .logo {
@@ -43,7 +43,7 @@
     align-items: center;
     justify-content: space-around;
 }
-  
+
 .img {
     width: 100%;
     object-fit: cover;
@@ -51,7 +51,7 @@
     height: 32vh;
     padding: 3.7px;
 }
-  
+
 .div {
     width: 70%;
     height: 30vh;
@@ -60,7 +60,7 @@
     justify-content: space-around;
     order: 1;
 }
-  
+
 .titulo {
     font-size: 1.5em;
     font-weight: 400;
@@ -69,7 +69,7 @@
 .p {
     font-size-adjust: initial;
     font-weight: 400;
-    text-align: center;   
+    text-align: center;
 }
 
 ul li {
@@ -89,8 +89,10 @@ a {
 }
 
 h1 {
-    text-align: center;
-    padding: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  padding: 12px;
 }
 
 footer {
@@ -100,4 +102,3 @@ footer {
     text-align: center;
     line-height: 30px;
 }
-  
