--- a/index.css
+++ b/index.css
@@ -7,12 +7,13 @@
     color: #f4f3ee;
 }
 .header {
-    width: 100%;
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    text-transform: uppercase;
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  text-transform: uppercase;
+  margin-bottom: 40px;
 }
 .logo {
     width: 150px;
@@ -37,10 +38,6 @@ a {
 nav a:hover {
     color: blue;
 }
-header {
-    text-align: center;
-    margin-bottom: 40px;
-}
 footer {
     width: 80%;
     height: 20vh;
@@ -60,17 +57,21 @@ ul li {
     text-align: center;
     padding: 12px;
     text-decoration: none;
-    
+
 }
 .telahome {
-    margin-left: 300px;
+    margin: auto;
     padding: 12px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-section { 
+section {
     display: flex;
     justify-content: space-between;
-    text-align: center;    
+    text-align: center;
     padding: 12px;
     border: solid 2px white;
     margin: 12px 60px 12px 60px;
