--- a/noticias_da_semana/index_not_da_sem.css
+++ b/noticias_da_semana/index_not_da_sem.css
@@ -7,12 +7,12 @@
     color: #f4f3ee;
 }
 .header {
-    width: 100%;
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    text-transform: uppercase;
+  width: 100%;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  text-transform: uppercase;
 }
 .logo {
     width: 150px;
@@ -37,10 +37,6 @@ a {
 nav a:hover {
     color: blue;
 }
-header {
-    text-align: center;
-    margin-bottom: 40px;
-}
 footer {
     width: 80%;
     height: 20vh;
@@ -49,29 +45,34 @@ footer {
     line-height: 30px;
 }
 h1 {
-    text-align: center;
-    padding: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  padding: 12px
 }
 h2 {
     text-align: center;
     padding: 12px;
+    margin-bottom: 40px;
 }
 ul li {
     text-align: center;
     padding: 12px;
     text-decoration: none;
-    
+
 }
 .imagemnoticias {
-    height: 300px; 
-    width: 300px; 
-    margin-left: 530px;
+    height: 100px;
+    width: 120px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
-
-section { 
+section {
     display: flex;
     justify-content: space-around;
-    text-align: left;    
+    text-align: left;
     padding: 24px;
     border: solid 2px white;
     margin: 12px 60px 12px 60px;
@@ -82,4 +83,5 @@ section p {
 }
 section h3 {
     padding: 24px;
+    margin-top: 40px;
 }
