--- a/cursos/style.css
+++ b/cursos/style.css
@@ -1,153 +1,123 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #2b2d42;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f4f3ee;
-  }
-  
-  .header {
-    width: 100%;
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    text-transform: uppercase;
-    
-  }
-  .logo {
-    width: 150px;
-    height: 150px;
-    margin-top: 40px;
-  }
-  .nav {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Verdana', Geneva, Tahoma, sans-serif;
+  background-color: #2b2d42;
+  color: #f4f3ee;
+}
+
+.header {
+  background-color: #1d1e2d;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 150px;
+  height: 150px;
+  margin-top: 40px;
+}
+
+.nav {
     width: 80%;
     display: flex;
     justify-content: space-around;
-  }
-  .ul {
+}
+.ul {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    list-style: none;
-  }
-  
-  a {
+    list-style-type: none;
+    
+}
+a {
+    margin-right: 100px;
     text-decoration: none;
     color: #f4f3ee;
+    font-size: larger;
+}
+
+.linkCurso {
+  display: inline-block;
+  background-color: #4d4f6d;
+  color: #f4f3ee;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.linkCurso:hover {
+  background-color: #6b6e91;
+}
+
+nav a:hover {
+    color: blue;
+}
+
+main {
+  padding: 20px;
+}
+
+h1 {
+  color: #f4f3ee; 
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  padding: 12px
+}
+section {
+  margin-bottom: 40px;
+}
+
+h2 {
+  text-align: center;
+  padding: 12px;
+  margin-bottom: 40px;
+}
+.curso1,
+.curso2,
+.curso3,
+.curso4 {
+  background-color: #1d1e2d;
+  padding: 20px;
+  border-radius: 10px;
+  overflow: hidden; 
+  list-style-type: none;
+}
+
+.logocursos {
+  max-width: 200px; 
+  height: auto;
+  float: left; 
+  margin-right: 20px; 
+}
+
+.curso1 p,
+.curso2 p,
+.curso3 p,
+.curso4 p {
+  overflow: hidden; /* Limpa a flutuação e mantém o layout correto */
+}
+
+
+.footer {
+    background-color: #1d1e2d;
+    color: #f4f3ee;
+    padding: 20px;
+    text-align: center;
   }
   
-  h1 {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 200;
+  .footer a {
+    color: #f4f3ee;
+    text-decoration: underline;
+    margin: 0 5px;
   }
-
-.curso1 {
-    align-items: center;
-    display: flex;
-    margin:10px auto;
-    justify-content: space-around;
-    box-sizing: border-box;
-}
-.curso1 h2 {
-  padding: 20px;
-}
-
-.curso1 img {
-  margin-bottom: -7em;
-  margin-left: 1em;
-}
-
-.curso1 p {
-  margin-left: 15em;
-  margin-bottom: 1em;
-  align-items: center;
-  display: flex;
-  box-sizing: border-box;
-}
-
-.curso1 a {
-  margin-left: 15em;
-  margin-bottom: 2em;
-  color: black;
-}
-
-.curso2 h2 {
-  padding: 20px;
-}
-
-.curso2 img {
-  margin-bottom: 0.1em;
-  margin-left: 1em;
-}
-
-.curso2 p {
-  margin-left: 15em;
-  margin-bottom: 1em;
-  margin-top: -3.5em;
-  align-items: center;
-  display: flex;
-  box-sizing: border-box;
-}
-
-.curso2 a {
-  margin-left: 15em;
-  margin-bottom: 2em;
-  color: black;
-}
-
-.curso3 h2 {
-  padding: 20px;
-}
-
-.curso3 img {
-  margin-bottom: -5em;
-  margin-left: 1em;
-}
-
-.curso3 p {
-  margin-left: 15em;
-  margin-bottom: 1em;
-  align-items: center;
-  display: flex;
-  box-sizing: border-box;
-}
-
-.curso3 a {
-  margin-left: 15em;
-  color: black;
-}
-
-.curso4 h2 {
-  padding: 20px;
-}
-
-.curso4 img {
-  margin-left: 1em;
-  margin-top: 2em;
-}
-
-.curso4 p {
-  margin-left: 15em;
-  margin-top: -3.5em;
-  margin-bottom: 1em;
-  align-items: center;
-  display: flex;
-  box-sizing: border-box;
-}
-
-.curso4 a {
-  margin-left: 15em;
-  margin-top: 5em;
-  color: black;
-}
-
-footer {
-  width: 80%;
-  height: 20vh;
-  margin: 50px auto;
-  text-align: center;
-  line-height: 30px;
-}
+  
