--- a/sobre_quem_somos/assets/css/footer-style.css
+++ b/sobre_quem_somos/assets/css/footer-style.css
@@ -1,7 +1,7 @@
 footer {
-  width: 80%;
-  height: 20vh;
-  margin: 50px auto;
+  width: 100vw;
+  height: 35vh;
   text-align: center;
   line-height: 30px;
+  margin-top: 60px;
 }
