--- a/sobre_quem_somos/assets/css/header-style.css
+++ b/sobre_quem_somos/assets/css/header-style.css
@@ -8,18 +8,20 @@
 }
 
 .header {
-  width: 100%;
-  height: 12vh;
+  width: 90vw;
+  height: 24vh;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   text-transform: uppercase;
-  
+ 
 }
 .logo {
-  width: 150px;
-  height: 150px;
-  margin-top: 40px;
+  width: 140px;
+  height: 140px;
+  margin-top: 8px;
+  
 }
 .nav {
   width: 80%;
