--- a/index.css
+++ b/index.css
@@ -1,78 +1,101 @@
+/* Reset CSS */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #2b2d42;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #f4f3ee;
-}
-.header {
-  width: 100%;
-  height: 12vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  text-transform: uppercase;
-  margin-bottom: 40px;
-}
-.logo {
+  }
+  
+  body {
+    font-family: 'Verdana', Geneva, Tahoma, sans-serif;
+    background-color: #f8f8f8; /* Fundo mais claro */
+    color: #333; /* Cor do texto mais escura */
+  }
+  
+  /* Header Style */
+  .header {
+    background-color: #4d4dff; /* Azul mais vibrante */
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .logo {
     width: 150px;
     height: 150px;
-    margin-top: 40px;
-}
-.nav {
+    margin-top: 20px;
+  }
+  
+  .nav {
     width: 80%;
     display: flex;
-    justify-content: space-around;
-}
-.ul {
+    justify-content: center;
+  }
+  
+  .ul {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    list-style-type: none;
+  }
+  
+  a {
+    text-decoration: none;
+  color: #fff; /* Cor do texto mais clara para destaque */
+  font-weight: bold; /* Texto em negrito */
+  transition: color 0.3s ease;
+  }
+  
+  a:hover {
+    color: #ffcc00; /* Cor do texto mais clara no hover */
+  }
+  
+  /* Main Style */
+  main {
+    padding: 20px;
+  }
+  
+  ul {
     list-style: none;
-}
-a {
-    text-decoration: none;
-    color: #f4f3ee;
-}
-nav a:hover {
-    color: blue;
-}
-footer {
-    width: 80%;
-    height: 20vh;
-    margin: 50px auto;
     text-align: center;
-    line-height: 30px;
-}
-h1 {
+  }
+  
+  
+  .telahome {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+  }
+  
+  h1, h2, h3 {
     text-align: center;
-    padding: 12px;
-}
-h2 {
+    color: #4d4dff; /* Azul mais vibrante */
+  }
+  
+  h1 {
+    text-transform: uppercase;
+    font-weight: 200;
+  }
+  
+  section {
+    background-color: #fff; /* Fundo branco */
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  
+  /* Footer Style */
+  footer {
+    background-color: #4d4dff; /* Azul mais vibrante no rodapé */
+    color: #fff; /* Texto branco */
+    padding: 20px;
     text-align: center;
-    padding: 12px;
-}
-ul li {
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-
-}
-.telahome {
-    margin: auto;
-    padding: 12px;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-section {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 12px;
-    border: solid 2px white;
-    margin: 12px 60px 12px 60px;
-}
+  }
+  
+  footer a {
+    color: #fff; /* Texto branco para links no rodapé */
+    text-decoration: underline;
+    margin: 0 5px;
+  }
+  
