--- a/cursos/style.css
+++ b/cursos/style.css
@@ -6,12 +6,12 @@
 
 body {
   font-family: 'Verdana', Geneva, Tahoma, sans-serif;
-  background-color: #f8f8f8; /* Fundo mais claro */
-  color: #333; /* Cor do texto mais escura */
+  background-color: #f8f8f8; 
+  color: #333; 
 }
 
 .header {
-  background-color: #4d4dff; /* Azul mais vibrante */
+  background-color: #4d4dff;
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -21,13 +21,13 @@ body {
 .logo {
   width: 150px;
   height: 150px;
-  margin-top: 20px; /* Reduzi o espaçamento superior */
+  margin-top: 20px; 
 }
 
 .nav {
   width: 80%;
   display: flex;
-  justify-content: center; /* Centralizado o menu */
+  justify-content: center; 
 }
 
 .ul {
@@ -39,13 +39,13 @@ body {
 
 a {
   text-decoration: none;
-  color: #fff; /* Cor do texto mais clara para destaque */
-  font-weight: bold; /* Texto em negrito */
+  color: #fff; 
+  font-weight: bold; 
   transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #ffcc00; /* Cor do texto mais clara no hover */
+  color: #ffcc00; 
 }
 
 main {
@@ -54,8 +54,8 @@ main {
 
 .linkCurso {
   display: inline-block;
-  background-color: #ff66b2; /* Rosa mais vibrante */
-  color: #fff; /* Texto branco */
+  background-color: #ff66b2; 
+  color: #fff; 
   padding: 8px 16px;
   text-decoration: none;
   border-radius: 5px;
@@ -64,12 +64,12 @@ main {
 }
 
 .linkCurso:hover {
-  background-color: #ff3385; /* Rosa mais escuro no hover */
+  background-color: #ff3385; 
 }
 
 
 h1 {
-  color: #4d4dff; /* Azul mais vibrante */
+  color: #4d4dff; 
   text-align: center;
   text-transform: uppercase;
   font-weight: 200;
@@ -90,12 +90,12 @@ h2 {
 .curso2,
 .curso3,
 .curso4 {
-  background-color: #fff; /* Fundo branco para destacar */
+  background-color: #fff;
   padding: 20px;
   border-radius: 10px;
   overflow: hidden;
   list-style-type: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra sutil */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .logocursos {
@@ -109,18 +109,18 @@ h2 {
 .curso2 p,
 .curso3 p,
 .curso4 p {
-  overflow: hidden; /* Limpa a flutuação e mantém o layout correto */
+  overflow: hidden;
 }
 
 footer {
-  background-color: #4d4dff; /* Azul mais vibrante no rodapé */
-  color: #fff; /* Texto branco */
+  background-color: #4d4dff;
+  color: #fff;
   padding: 20px;
   text-align: center;
 }
 
 footer a {
-  color: #fff; /* Texto branco para links no rodapé */
+  color: #fff;
   text-decoration: underline;
   margin: 0 5px;
 }
