--- a/historia_da_programacao/historia.css
+++ b/historia_da_programacao/historia.css
@@ -6,12 +6,12 @@
 
 body {
   font-family: 'Verdana', Geneva, Tahoma, sans-serif;
-  background-color: #f8f8f8; /* Fundo mais claro */
-  color: #333; /* Cor do texto mais escura */
+  background-color: #f8f8f8; 
+  color: #333; 
 }
 
 .header {
-  background-color: #4d4dff; /* Azul mais vibrante */
+  background-color: #4d4dff; 
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -39,13 +39,13 @@ body {
 
 a {
   text-decoration: none;
-  color: #fff; /* Cor do texto mais clara para destaque */
-  font-weight: bold; /* Texto em negrito */
+  color: #fff; 
+  font-weight: bold; 
   transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #ffcc00; /* Cor do texto mais clara no hover */
+  color: #ffcc00; 
 }
 
 main {
@@ -53,7 +53,7 @@ main {
 }
 
 h1 {
-  color: #4d4dff; /* Azul mais vibrante */
+  color: #4d4dff; 
   text-align: center;
   text-transform: uppercase;
   font-weight: 200;
@@ -79,12 +79,12 @@ h1 {
 
 .section a {
   text-decoration: none;
-  color: #333; /* Cor do texto mais escura */
+  color: #333; 
   display: block;
 }
 
 .section a:hover {
-  color: #4d4dff; /* Cor do texto mais vibrante no hover */
+  color: #4d4dff; 
 }
 
 .p {
@@ -92,14 +92,14 @@ h1 {
 }
 
 footer {
-  background-color: #4d4dff; /* Azul mais vibrante no rodapé */
-  color: #fff; /* Texto branco */
+  background-color: #4d4dff; 
+  color: #fff; 
   padding: 20px;
   text-align: center;
 }
 
 footer a {
-  color: #fff; /* Texto branco para links no rodapé */
+  color: #fff; 
   text-decoration: underline;
   margin: 0 5px;
 }
