--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-/* Reset CSS */
 * {
     margin: 0;
     padding: 0;
@@ -7,13 +6,13 @@
   
   body {
     font-family: 'Verdana', Geneva, Tahoma, sans-serif;
-    background-color: #f8f8f8; /* Fundo mais claro */
-    color: #333; /* Cor do texto mais escura */
+    background-color: #f8f8f8; 
+    color: #333; 
   }
   
-  /* Header Style */
+  
   .header {
-    background-color: #4d4dff; /* Azul mais vibrante */
+    background-color: #4d4dff; 
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -41,16 +40,16 @@
   
   a {
     text-decoration: none;
-  color: #fff; /* Cor do texto mais clara para destaque */
-  font-weight: bold; /* Texto em negrito */
+  color: #fff; 
+  font-weight: bold; 
   transition: color 0.3s ease;
   }
   
   a:hover {
-    color: #ffcc00; /* Cor do texto mais clara no hover */
+    color: #ffcc00; 
   }
   
-  /* Main Style */
+  
   main {
     padding: 20px;
   }
@@ -71,7 +70,7 @@
   
   h1, h2, h3 {
     text-align: center;
-    color: #4d4dff; /* Azul mais vibrante */
+    color: #4d4dff; 
   }
   
   h1 {
@@ -80,21 +79,21 @@
   }
   
   section {
-    background-color: #fff; /* Fundo branco */
+    background-color: #fff; 
     padding: 20px;
     margin-bottom: 20px;
   }
   
-  /* Footer Style */
+  
   footer {
-    background-color: #4d4dff; /* Azul mais vibrante no rodapé */
-    color: #fff; /* Texto branco */
+    background-color: #4d4dff; 
+    color: #fff; 
     padding: 20px;
     text-align: center;
   }
   
   footer a {
-    color: #fff; /* Texto branco para links no rodapé */
+    color: #fff;
     text-decoration: underline;
     margin: 0 5px;
   }
