--- a/sobre_quem_somos/assets/css/footer-style.css
+++ b/sobre_quem_somos/assets/css/footer-style.css
@@ -1,7 +1,7 @@
 footer {
   width: 100vw;
-  height: 35vh;
+  height: 25vh;
   text-align: center;
   line-height: 30px;
-  margin-top: 60px;
+  margin: 12px;
 }
