--- a/sobre_quem_somos/assets/css/main-style.css
+++ b/sobre_quem_somos/assets/css/main-style.css
@@ -7,6 +7,7 @@ h1 {
   text-transform: uppercase;
   font-weight: 200;
   padding: 10px;
+  background-color: #4d4f6d;
 }
 .section {
   width: 95vw;
@@ -44,66 +45,49 @@ h1 {
   width: 25px;
   height: 25px;
 }
+h2{ 
+  text-align: center;
+  padding: 4px;
+  background-color: #4d4f6d;
+}
+h3{
+  text-align: center;
+  padding: 8px;
+  background-color: #4d4f6d;
+}
 
 .form {
-  width: 95vw;
-  height: 60vh;
+  width: 90vw;
+  height: 80vh;
   margin: 0 auto;
- 
-}
-
-form h2 {
-  text-align: center;
-  padding: 8px;
-  font-size: 2rem;
-}
-form h4 {
-  text-align: center;
-  padding: 6px;
-  font-size: 1.2rem;
-}
-
-.sectionForm {
   display: flex;
-  justify-content: space-around;
- 
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
 }
-form label {
+
+
+label {
   font-size: 1.2em;
   padding: 8px;
-  margin-bottom: 4px;
+  cursor: pointer;
+  
 }
-
-p {
-  font-size: 1em;
-  padding: 8px;
-}
-.data {
-  width: 40%;
-  height: 50vh;
-}
-.data input {
+input {
   width: 40vw;
   padding: 12px;
-  margin-top: 4px;
+  margin-top: 6px;
   border-radius: 10px;
-}
-
-textarea {
-  width: 40vw;
-  padding: 1rem 0.75rem;
-  border-radius: 10px;
-}
-.tech {
-  width: 40%;
-  height: 50vh;
-}
-.tech label {
-  padding: 8px;
+  cursor: pointer;
 }
 select {
   width: 40vw;
   padding: 4px;
+  border-radius: 10px;
+}
+textarea {
+  width: 40vw;
+  padding: 1rem 0.75rem;
   border-radius: 10px;
 }
 button {
@@ -118,6 +102,11 @@ button {
   border-radius: 50px;
 }
 button:hover {
-  background-color: #2a6f97;
+  opacity: 0.5;
   transition: 0.3s;
+}
+.final{
+  width: 100vw;
+  height: 10vh;
+  background-color: #4d4f6d;
 }
