--- a/cursos/style.css
+++ b/cursos/style.css
@@ -2,57 +2,47 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
-
 body {
   font-family: 'Verdana', Geneva, Tahoma, sans-serif;
   background-color: #2b2d42;
   color: #f4f3ee;
-  font-size: 16px;
 }
 
 .header {
-  background-color: #1d1e2d;
-  padding: 10px;
+  width: 95vw;
+  height: 24vh;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  
+  justify-content: space-around;
+  text-transform: uppercase;
 }
-
 .logo {
-  width: 100%;
-  max-width: 150px;
+  width: 140px;
+  height: 140px;
 }
-
 .nav {
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 10px;
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
 }
 .ul {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
 }
 
-ul li{
-  display: inline-block;
-  margin-right: 20px;
-  margin-bottom: 10px;
-}
 a {
-    text-decoration: none;
-    color: #f4f3ee;
-    font-weight: bold;
-    font-size: 16px;
-    transition: color 0.3s ease; 
+  text-decoration: none;
+  color: #f4f3ee;
 }
+a:hover {
+  opacity: 0.6
+}
+
 
 .linkCurso {
   display: inline-block;
@@ -70,20 +60,22 @@ a {
 }
 
 nav a:hover {
-    color: blue;
+  color: blue;
 }
 
 .main {
+  background-color: #4d4f6d;
   padding: 10px;
 }
 
 h1 {
-  color: #f4f3ee; 
+  color: #f4f3ee;
   text-align: center;
   text-transform: uppercase;
   font-weight: 200;
-  padding: 12px
+  padding: 12px;
 }
+
 section {
   margin-bottom: 40px;
 }
@@ -93,6 +85,7 @@ h2 {
   padding: 12px;
   margin-bottom: 40px;
 }
+
 .curso1,
 .curso2,
 .curso3,
@@ -100,15 +93,15 @@ h2 {
   background-color: #1d1e2d;
   padding: 10px;
   border-radius: 10px;
-  overflow: hidden; 
+  overflow: hidden;
   list-style-type: none;
 }
 
 .logocursos {
+  max-width: 150px;
   width: 100%;
-  max-width: 150px; 
   height: auto;
-  float: left; 
+  float: left;
   margin-right: 20px;
 }
 
@@ -119,19 +112,18 @@ h2 {
   overflow: hidden;
 }
 
-
 .footer {
-    background-color: #1d1e2d;
-    color: #f4f3ee;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .footer a {
-    color: #f4f3ee;
-    text-decoration: underline;
-    margin: 0 5px;
-  }
+  background-color: #1d1e2d;
+  color: #f4f3ee;
+  padding: 10px;
+  text-align: center;
+}
+
+.footer a {
+  color: #f4f3ee;
+  text-decoration: underline;
+  margin: 0 5px;
+}
 
 @media screen and (max-width: 540px) {
   .nav {
@@ -140,11 +132,11 @@ h2 {
   }
 
   .ul {
-    display: block; 
+    display: block;
   }
 
   .ul.active {
-    display: flex; 
+    display: flex;
     flex-direction: column;
   }
 
@@ -153,12 +145,12 @@ h2 {
   }
 
   .nav-toggle {
-    display: block; 
+    display: block;
     cursor: pointer;
   }
 
   .nav-toggle img {
-    width: 30px; 
+    width: 30px;
     height: auto;
   }
 }
